drawpile update properly